# templates

./: .clang-format  .clang-tidy  .editorconfig  .gitlab-ci.yml  .gitlint  .pre-commit-config.yaml  .yamllint.yaml  Makefile  README.md  README.rst  compile_flags.txt  pyproject.toml  requirements.txt
.githooks/: pre-commit
.githooks/python/: post-checkout
.github/workflows/: cpp.yml  main.yml  python.yml
include/: template.hpp
src/: main.cpp  template.py
src/template/: __init__.py  __main__.py
tests/: invoke_test.py  test_invoke.py
