# https://peps.python.org/pep-0621/
[project]
name = "template"
version = "0.1.0"
description = "A starting point for Python projects"
readme = "README.rst"
requires-python = ">= 3.10"
license.file = "LICENSE"
# authors/maintainers
# keywords
# classifiers
# urls
# Entry points
dependencies = []
# optional-dependencies
dynamic = []
