# https://peps.python.org/pep-0621/
[project]
name = "template"
version = "0.1.0"
description = "A starting point for Python projects"
readme = "README.rst"
requires-python = ">= 3.10"
license.file = "LICENSE"
authors = [{ name = "GereonV", email = "72784429+GereonV@users.noreply.github.com" }]
# maintainers
# keywords
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
]
urls.Homepage = "https://github.com/GereonV/templates"
# urls.Documentation = "https://readthedocs.org"
urls.Repository = "https://github.com/GereonV/templates.git"
urls.Issues = "https://github.com/GereonV/templates/issues"
# urls.Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
# Entry points
scripts = { template = "template:main" }
dependencies = []
optional-dependencies.dev = ["mypy", "pytest"]
dynamic = []

[tool]
black.line-length = 79
isort.profile = "black"
isort.line_length = 79
